# dotlua

./: .clang-format  LINKS.md  README.md  format.sh  main.c  meson.build
lua/: meson.build  sh-bind.c  sh-call.c  sh-delete.c  sh-get.c  sh-put.c  sh-set.c
tests/: 000-prefix.lua  001-bash-builtin.bats  002-hello-args.lua  002-source-file.bats  003-execute-string.bats  003-get-shell-var.lua  004-call-function.bats  004-set-shell-var.lua  005-call-shell.lua  005-list-lua-bind.bats  006-call-shell-args.lua  007-call-shell.lua  008-bind-lua-args.lua  009-bind-lua.lua  101-namespace.bats  102-get.bats  103-set.bats  104-call.bats  105-bind.bats  106-put.bats  107-delete.bats  _test.sh  bind_lua_func.lua  call_shell_fn_1.lua  call_shell_fn_2.lua  call_shell_fn_3.lua  get_shell_var.lua  set_shell_var.lua  test.sh  test_helper.bash
tests/lua/: 008-bind-lua-args.lua  009-bind-lua.lua  010-bind-lua-ret.lua
